validation-form-and-add-comment-with-today-data

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 form {
     display: flex;
     flex-direction: column;
@@ -10,12 +16,12 @@ form {
     margin-top: 1rem;
   }
   
-  input[type="text"],
+  input,
   textarea {
     padding: 0.5rem;
     border-radius: 0.25rem;
     border: 1px solid #ccc;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     font-size: 1rem;
   }
   
@@ -37,4 +43,39 @@ form {
   button:hover {
     background-color: #006b8f;
   }
+
+  .error {
+    color: red;
+    display: none;
+    margin-top: 0.5rem;
+  }
   
+  .list {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px; 
+    margin: 0 auto;
+  }
+
+  .item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+  }
+
+  .item__rating {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-top: 0.5rem;
+  }
+
+  .item__rating-value {
+    font-weight: 600;
+  }
+  
+  .item__text {
+    margin-top: 0.5rem;
+  }
